--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,13 +9,8 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #272626;
-  color: #333;
 }
 
-.btn btn-primary{
-  margin: 10px, 0, 0, 10px;
-}
 /* Custom Offcanvas Styling */
 #sidebar{
   border-radius: 0.8rem; /* rounded left corners */
@@ -25,6 +20,30 @@ body {
   border-radius: 0.8rem; /* rounded left corners */
   box-shadow: 0 0 15px rgb(131, 131, 131, 0.5); /* soft shadow */
 }
+#sidebar-btn{
+  color: black;
+  border-radius: 0.8rem; /* rounded left corners */
+  box-shadow: 0 0 15px rgb(131, 131, 131, 0.5); /* soft shadow */
+}
+#topbar-cont{
+  margin-bottom: -13px;
+  padding-left: 80px;
+  
+}
+#topbar-btn{
+  min-height: calc(100% + 6px);
+  min-width: calc(100% + 10px);
+  color: black;
+  border-radius: 0.8rem 0.8rem 0 0; /* rounded left corners */
+  box-shadow: 0 0 15px rgb(131, 131, 131, 0.5); /* soft shadow */
+}
+#sidebar-btn.btn-secondary{
+  color: white;
+}
+#topbar-btn.btn-secondary{
+  color: white;
+}
+
 
 
 /* Dashboard Container */
