set-up db and backend again

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,7 @@
 
   /* Background & Surfaces */
   --color-surface: #FFFFFF;
+  --color-bg:rgb(224, 224, 224);
 
   /* Text */
   --color-text: #212529;
